src/test/deca/codegen/invalid/resultats/var14-ima.res
  ** IMA ** ERREUR ** Ligne 158 : 
    CMP avec op1 : entier et op2 : indefini
